<!--

    Gherkin Extension Jupiter
    Copyright © 2019 - 2022 Gmasil

    This file is part of Gherkin Extension Jupiter.

    Gherkin Extension Jupiter is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Gherkin Extension Jupiter is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Gherkin Extension Jupiter.  If not, see <https://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.gmasil</groupId>
    <artifactId>gherkin-extension-jupiter</artifactId>
    <version>1.6-SNAPSHOT</version>
    <name>Gherkin Extension Jupiter</name>
    <description>JUnit Jupiter extension to write tests in gherkin style</description>

    <inceptionYear>2019 - 2022</inceptionYear>
    <url>https://github.com/gmasil/gherkin-extension-jupiter</url>

    <organization>
        <name>Gmasil</name>
        <url>https://gmasil.de</url>
    </organization>

    <licenses>
        <license>
            <name>GNU General Public License v3 (GPLv3)</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
        </license>
    </licenses>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- versions -->
        <junit-jupiter.version>5.10.1</junit-jupiter.version>
        <junit-platform.version>1.10.1</junit-platform.version>
        <jackson.version>2.16.1</jackson.version>
        <hamcrest.version>1.3</hamcrest.version>
        <mockito.version>5.8.0</mockito.version>
        <!-- plugin versions -->
        <surefire.version>3.2.3</surefire.version>
        <failsafe.version>3.2.3</failsafe.version>
        <jacoco.version>0.8.11</jacoco.version>
        <source-plugin.version>3.3.0</source-plugin.version>
        <javadoc-plugin.version>3.6.3</javadoc-plugin.version>
        <license-plugin.version>4.3</license-plugin.version>
        <!-- skip test config -->
        <skipITs>true</skipITs>
        <skip.surefire.tests>${skipTests}</skip.surefire.tests>
        <!-- skip source and javadoc generation by default -->
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <maven.source.skip>true</maven.source.skip>
    </properties>

    <dependencies>
        <!-- jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>${jackson.version}</version>
        </dependency>
        <!-- test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- hamcrest -->
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- mockito -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>full-build</id>
            <properties>
                <skipITs>false</skipITs>
                <skip.surefire.tests>false</skip.surefire.tests>
                <maven.javadoc.skip>false</maven.javadoc.skip>
                <maven.source.skip>false</maven.source.skip>
            </properties>
        </profile>
        <profile>
            <id>integration-tests-only</id>
            <properties>
                <skipITs>false</skipITs>
                <skip.surefire.tests>true</skip.surefire.tests>
            </properties>
        </profile>
        <profile>
            <id>create-docs</id>
            <properties>
                <maven.javadoc.skip>false</maven.javadoc.skip>
                <maven.source.skip>false</maven.source.skip>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <!-- surefire -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <skipTests>${skip.surefire.tests}</skipTests>
                </configuration>
            </plugin>
            <!-- failsafe -->
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${failsafe.version}</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- jacoco -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <!-- unit tests -->
                    <execution>
                        <id>pre-unit-test</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                        </configuration>
                    </execution>
                    <!-- integration tests -->
                    <execution>
                        <id>pre-integration-test</id>
                        <phase>pre-integration-test</phase>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                            <destFile>${project.build.directory}/jacoco-it.exec</destFile>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- source jar for deploy -->
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>${source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- javadoc jar for deploy -->
            <plugin>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${javadoc-plugin.version}</version>
                <configuration>
                    <skip>${maven.source.skip}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- license -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>${license-plugin.version}</version>
                <configuration>
                    <properties>
                        <owner>Gmasil</owner>
                        <software.name>${project.name}</software.name>
                    </properties>
                    <licenseSets>
                        <licenseSet>
                            <header>${project.basedir}/license/templates/gnu_gpl_v3.txt</header>
                            <includes>
                                <include>src/main/java/**</include>
                                <include>src/main/resources/**</include>
                                <include>src/test/java/**</include>
                                <include>src/test/resources/**</include>
                                <include>pom.xml</include>
                            </includes>
                            <excludes>
                                <exclude>**/LICENSE.txt</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- enforce versions -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.0</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>${java.version}</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>nexus</id>
            <url>https://nexus.gmasil.de/repository/maven-releases/</url>
        </repository>
        <snapshotRepository>
            <id>nexus</id>
            <url>https://nexus.gmasil.de/repository/maven-snapshots/</url>
        </snapshotRepository>
    </distributionManagement>
</project>
